--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,7 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(clearweb)
-add_executable(${PROJECT_NAME} ./src/core/clear_main.cc)
+set(library_SOURCES
+    src/Eventloop.cc
+)
+add_library(clearweb STATIC ${library_SOURCES})
+add_executable(${PROJECT_NAME} ./src/test/Eventloop_test1.cc)
