--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,25 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(clearweb)
-set(library_SOURCES
-    src/Eventloop.cc
-    src/base/CurrentThread.h
-)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-add_library(clearweblib STATIC ${library_SOURCES})
 
-add_executable(${PROJECT_NAME} ./src/test/Eventloop_test1.cc)
-target_link_libraries(clearweb clearweblib)
+if(NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE "Debug")
+endif()
+
+set(CXX_FLAGS
+    -g
+    -Wall
+    -std=c++11
+    -D_PTHREADS
+    -Wno-unused-parameter
+)
+set(CMAKE_CXX_COMPILER "g++")
+set(CMAKE_CXX_FLAGS_DEBUG "-O0")
+set(CMAKE_CXX_FLAGS_RELEASE "-O0")
+
+string(REPLACE ";" " " CMAKE_CXX_FLAGS "${CXX_FLAGS}")
+
+
+string(TOUPPER ${CMAKE_BUILD_TYPE} BUILD_TYPE)
+message(STATUS "CXX_FLAGS = " ${CMAKE_CXX_FLAGS} " " ${CMAKE_CXX_FLAGS_${BUILD_TYPE}})
+
+add_subdirectory(src)
